# Dev-Toolkit-X

./: CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: run_diagnostic.sh  sentiment_trade.rs
src/ai_gateway/: .env.example  package.json  router.ts
src/mcp/: requirements.txt  server.py  vector_indexer.py
src/orchestrator/: Cargo.toml  main.rs
src/orchestrator/src/: error.rs  lib.rs
src/scanner/: audit.go  go.mod
src/telemetry/: trace_logger.rs
