[package]
name = "dev-toolkit-orchestrator"
version = "0.1.0"
edition = "2021"
description = "High-frequency multi-agent orchestrator"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# High-performance memory allocator for sub-ms execution loops
mimalloc = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
