[package]
name = "dev-toolkit-orchestrator"
version = "0.1.0"
edition = "2021"
description = "High-frequency multi-agent orchestrator"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ratatui = "0.26"
crossterm = "0.27"
metrics = "0.22" # The standard Rust metrics facade

mimalloc = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
